Fixed issue where front page wouldn't scroll on mobile

--- a/style-responsive.css
+++ b/style-responsive.css
@@ -124,7 +124,7 @@
 	#footer { height: 473px; }
 	
 	/* Front Page */
-	html.front-page, .front-page body { overflow-y: auto; }
+	html.front-page, .front-page body { overflow-y: auto !important; }
 	.front-page body { background: center center no-repeat; }
 	.front-page #header { padding: 0 20px; }
 	
